frontend design for "borrowed books" page,  removed "change password" button, and added hamburger button

--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -24,8 +24,12 @@
       <nav>
         <h3>Akaru</h3>
         <div class="hamburger" id="hamburger">
-          <img class="icon" id="icon" src="public/images/user-profile.png">
+        <div class="icon">
+          <span class="line-1"></span>
+          <span class="line-2"></span>
+          <span class="line-3"></span>
         </div>
+      </div>
       </nav>
       <section class="menu" id="menu">
         <div class="container">
@@ -40,7 +44,6 @@
           </ul>
           <div class="account">
             <a id="userName" href="#" class="username">Guest</a>
-            <a href="#" class="password">Change Password</a>
             <button id="logOutBtn" type="button" class="logout">Log Out</button>
           </div>
         </div>
