--- a/src/pages/borrowed_books.html
+++ b/src/pages/borrowed_books.html
@@ -6,69 +6,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Akaru | Books</title>
   <!-- Add stylesheet here -->
-  <link rel="stylesheet" type="text/css" href="styles/admin_book_page.css">
+  <link rel="stylesheet" type="text/css" href="styles/borrowed_book_page.css">
 </head>
 
 <body>
-  <main>
-    <h1>Borrowed Books</h1>
-
-    <section id="book_section">
-
-      <template id="book_template">
-        <div class="book_card">
-          <div class="book_img">
-            <img data-book-img src="public/images/book.jpg" alt="" width="200px">
-          </div>
-          <div class="book_info">
-            <!-- hide everything except book title and button -->
-            <p data-book-id style="display:none;"></p>
-            <p data-book-category class="genre" style="display:none;">Romance</p>
-            <p data-book-name class="book_title">Harry Potter</p>
-            <p data-book-authors style="display:none;">HIDE ME</p>
-            <button data-book-read-btn class="read" type="button">Read Now</button>
-            <button data-book-return-btn class="return" type="button">Return Book</button>
-          </div>
-
+  <header id="header">
+    <nav>
+      <h3 class="title">Akaru</h3>
+      <div class="hamburger" id="hamburger">
+        <div>
+          <span class="line-1"></span>
+          <span class="line-2"></span>
+          <span class="line-3"></span>
         </div>
-      </template>
+      </div>
+    </nav>
 
+    <section class="menu" id="menu">
+      <div class="container">
+        <ul class="options">
+          <li><a href="#">Home</a></li>
+          <li><a href="borrowed_books.html">Books</a></li>
+
+          <!-- testing purposes only -->
+          <!-- <button id="addBook" type="button">Add Book</button> -->
+          <!-- admin -->
+          <!-- <li><a href="">Admin</a></li> -->
+        </ul>
+        <div class="account">
+          <a id="userName" href="#" class="username">Guest</a>
+          <button id="logOutBtn" type="button" class="logout">Log Out</button>
+        </div>
+      </div>
     </section>
+  </header>
+  <div class="content">
+    <main>
+      <h1>Borrowed Books</h1>
 
-  </main>
+      <section class="book_section" id="book_section">
 
-  <footer>
-    <hr class="pc">
-    <!-- row 1 col 1 -->
-    <div class="r1 c1">
-      <p>Akaru Books</p>
-      <p>#1 Holy Angel St. Angeles</p>
-      <p>2009 Pampanga</p>
-      <p>Made by group1</p>
-    </div>
+        <template class="book_template" id="book_template">
+          <div class="book_card">
+            <div class="book_img">
+              <img data-book-img src="public/images/book.jpg" alt="" width="200px">
+            </div>
+            <div class="book_info">
+              <!-- hide everything except book title and button -->
+              <p data-book-id style="display:none;"></p>
+              <p data-book-category class="genre" style="display:none;">Romance</p>
+              <p data-book-name class="book_title">Harry Potter</p>
+              <p data-book-authors style="display:none;">HIDE ME</p>
+              <button data-book-read-btn class="read" type="button">Read</button>
+              <button data-book-return-btn class="return" type="button">Return</button>
+            </div>
+          </div>
+        </template>
+        
+      </section>
 
-    <!-- row 1 col 2 -->
-    <div class="r1 c2">
-      <p>contact@akaru.books</p>
-      <p>+6392345678910</p>
-    </div>
-    <hr class="pc">
-    <!-- row 2 col 1 -->
-    <div class="r2 c1">
-      <a href="">Instagram</a>
-      <a href="">LinkedIn</a>
-      <a href="">Twitter</a>
-      <a href="">Facebook</a>
-    </div>
+    </main>
 
-    <!-- row 2 col 2 -->
-    <div class="r2 c2">
-      <p>Legal Notices</p>
-      <p>Akaru&copy;2024</p>
-    </div>
-    <hr>
-  </footer>
+    <footer>
+      <hr>
+      <!-- row 1 col 1 -->
+      <div class="r1 c1">
+        <p>Akaru Books</p>
+        <p>#1 Holy Angel St. Angeles</p>
+        <p>2009 Pampanga</p>
+        <p>Made by group 1</p>
+      </div>
+
+      <!-- row 1 col 2 -->
+      <div class="r1 c2">
+        <p>contact@akaru.books</p>
+        <p>+6392345678910</p>
+      </div>
+      <hr class="pc">
+      <!-- row 2 col 1 -->
+      <div class="r2 c1">
+        <a href="">Instagram</a>
+        <a href="">LinkedIn</a>
+        <a href="">Twitter</a>
+        <a href="">Facebook</a>
+      </div>
+
+      <!-- row 2 col 2 -->
+      <div class="r2 c2">
+        <p>Legal Notices</p>
+        <p>Akaru&copy;2024</p>
+      </div>
+      <hr>
+    </footer>
+  </div>
   <script type="module" src="bundled_files.js"> </script>
+
 </body>
 
 </html>
