--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -45,10 +45,6 @@
           </ul>
           <div class="account">
             <a id="userName" href="#" class="username">Guest</a>
-<<<<<<< HEAD
-=======
-            <p href="#" class="password"></p>
->>>>>>> 66932661f5822927cdc0f9d33f3c6003c6972563
             <button id="logOutBtn" type="button" class="logout">Log Out</button>
           </div>
         </div>
@@ -66,87 +62,90 @@
     </section>
 
   </header>
+  
+  <div class="page-content">
+    <main>
+      <section class="category-list" id="book_nav">
+        <ul class="content">
+          <li><a class="category " href="#">All</a></li>
+          <li><a class="category " href="#romance">Romance</a></li>
+          <li><a class="category " href="#mystery">Mystery</a></li>
+          <li><a class="category " href="#horror">Horror</a></li>
+          <li><a class="category " href="#fantasy">Fantasy</a></li>
+          <li><a class="category " href="#historical">Historical</a></li>
+          <li><a class="category " href="#science">Science</a></li>
+          <li><a class="category " href="#novel">Novel</a></li>
+          <li><a class="category " href="#classics">Classics</a></li>
+          <li><a class="category " href="#poetry">Poetry</a></li>
+        </ul>
+      </section>
 
-  <main>
-    <section class="category-list" id="book_nav">
-      <ul class="content">
-        <li><a class="category " href="#">All</a></li>
-        <li><a class="category " href="#romance">Romance</a></li>
-        <li><a class="category " href="#mystery">Mystery</a></li>
-        <li><a class="category " href="#horror">Horror</a></li>
-        <li><a class="category " href="#fantasy">Fantasy</a></li>
-        <li><a class="category " href="#historical">Historical</a></li>
-        <li><a class="category " href="#science">Science</a></li>
-        <li><a class="category " href="#novel">Novel</a></li>
-        <li><a class="category " href="#classics">Classics</a></li>
-        <li><a class="category " href="#poetry">Poetry</a></li>
-      </ul>
-    </section>
+      <section id="book_section" class="book_section">
 
-    <section id="book_section" class="book_section">
-
-      <template id="book_template">
-        <div class="book_card">
-          <div class="book_img">
-            <img data-book-img src="public/images/book.jpg" alt="">
+        <template id="book_template">
+          <div class="book_card">
+            <div class="book_img">
+              <img data-book-img src="public/images/book.jpg" alt="">
+            </div>
+            <div class="book_info">
+              <p data-book-id style="display:none;"></p>
+              <p data-book-category class="genre">Romance</p>
+              <p data-book-name class="book_title">Harry Potter</p>
+              <p data-book-authors style="display:none;">HIDE ME</p>
+              <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+            </div>
           </div>
-          <div class="book_info">
-            <p data-book-id style="display:none;"></p>
-            <p data-book-category class="genre">Romance</p>
-            <p data-book-name class="book_title">Harry Potter</p>
-            <p data-book-authors style="display:none;">HIDE ME</p>
-            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+        </template>
+
+      </section>
+
+      <!-- <section class="book_section" id="book_section">
+          <div class="book_card">
+            <div class="book_img">
+              <img src="../../public/images/book.jpg" width="200" alt="">
+            </div>
+            <div class="book_info">
+              <p data-book-genre class="genre">Mystery</p>
+              <p data-book-name class="book_title">Tom & Jerry</p>
+              <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+            </div>
           </div>
+      </section> -->
+    </main>
 
-        </div>
-      </template>
+    <footer>
+      <hr class="pc">
+      <!-- row 1 col 1 -->
+      <div class="r1 c1">
+        <p>Akaru Books</p>
+        <p>#1 Holy Angel St. Angeles</p>
+        <p>2009 Pampanga</p>
+        <p>Made by group1</p>
+      </div>
 
-    </section>
+      <!-- row 1 col 2 -->
+      <div class="r1 c2">
+        <p>contact@akaru.books</p>
+        <p>+6392345678910</p>
+      </div>
+      <hr class="pc">
+      <!-- row 2 col 1 -->
+      <div class="r2 c1">
+        <a href="">Instagram</a>
+        <a href="">LinkedIn</a>
+        <a href="">Twitter</a>
+        <a href="">Facebook</a>
+      </div>
 
-    <!-- <section class="book_section" id="book_section">
-        <div class="book_card">
-          <div class="book_img">
-            <img src="../../public/images/book.jpg" width="200" alt="">
-          </div>
-          <div class="book_info">
-            <p data-book-genre class="genre">Mystery</p>
-            <p data-book-name class="book_title">Tom & Jerry</p>
-            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
-          </div>
-        </div>
-    </section> -->
-  </main>
-  <footer>
-    <hr class="pc">
-    <!-- row 1 col 1 -->
-    <div class="r1 c1">
-      <p>Akaru Books</p>
-      <p>#1 Holy Angel St. Angeles</p>
-      <p>2009 Pampanga</p>
-      <p>Made by group1</p>
-    </div>
+      <!-- row 2 col 2 -->
+      <div class="r2 c2">
+        <p>Legal Notices</p>
+        <p>Akaru&copy;2024</p>
+      </div>
+      <hr>
+    </footer>
 
-    <!-- row 1 col 2 -->
-    <div class="r1 c2">
-      <p>contact@akaru.books</p>
-      <p>+6392345678910</p>
-    </div>
-    <hr class="pc">
-    <!-- row 2 col 1 -->
-    <div class="r2 c1">
-      <a href="">Instagram</a>
-      <a href="">LinkedIn</a>
-      <a href="">Twitter</a>
-      <a href="">Facebook</a>
-    </div>
-
-    <!-- row 2 col 2 -->
-    <div class="r2 c2">
-      <p>Legal Notices</p>
-      <p>Akaru&copy;2024</p>
-    </div>
-    <hr>
-  </footer>
+  </div>
   <script type="module" src="bundled_files.js"> </script>
 </body>
 
