added sidebar admin_index

--- a/src/pages/admin_book.html
+++ b/src/pages/admin_book.html
@@ -47,7 +47,7 @@
     
     <div id="formsContainer">
       <!-- ADD -->
-      <form id="addBookForm" action="admin_book_page.html" class="hidden fixed">
+      <form id="addBookForm" action="admin_book.html" class="hidden fixed">
         <h3 class="second__title">Add Book</h3><hr>
         <div class="hidden__container">
           <div class="width">
