--- a/src/pages/borrowed_books.html
+++ b/src/pages/borrowed_books.html
@@ -25,13 +25,9 @@
     <section class="menu" id="menu">
       <div class="container">
         <ul class="options">
-          <li><a href="#">Home</a></li>
+          <li><a href="index1.html">Home</a></li>
           <li><a href="borrowed_books.html">Books</a></li>
-
-          <!-- testing purposes only -->
-          <!-- <button id="addBook" type="button">Add Book</button> -->
-          <!-- admin -->
-          <!-- <li><a href="">Admin</a></li> -->
+          <li data-is-admin style="display:none;"><a href="admin_index.html">Admin</a></li>
         </ul>
         <div class="account">
           <a id="userName" href="#" class="username">Guest</a>
@@ -62,7 +58,7 @@
             </div>
           </div>
         </template>
-        
+
       </section>
 
     </main>
