--- a/src/pages/borrowed_books.html
+++ b/src/pages/borrowed_books.html
@@ -12,9 +12,9 @@
 <body>
   <header id="header">
     <nav>
-      <h3 class="title">Akaru</h3>
+      <h3 class="title"><a href="index1.html">Akaru</a></h3>
       <div class="hamburger" id="hamburger">
-        <div>
+        <div class="icon">
           <span class="line-1"></span>
           <span class="line-2"></span>
           <span class="line-3"></span>
