--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -22,7 +22,7 @@
 
     <section class="header" id="header">
       <nav>
-        <h3>Akaru</h3>
+        <h3><a class="main-title" href="#">Akaru</a></h3>
         <div class="hamburger" id="hamburger">
         <div class="icon">
           <span class="line-1"></span>
