--- a/src/pages/admin_index.html
+++ b/src/pages/admin_index.html
@@ -5,31 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Akaru | Admin Control Panel</title>
     <!-- <link href="css/style.css" rel="stylesheet"> -->
+     <link rel="stylesheet" href="../styles/admin_index.css">
   </head>
   <body>
-
-    <section class="header" id="header">
+    <header id="header">
       <nav>
-        <h3>Akaru</h3>
+        <h3 class="title"><a href="index1.html">Akaru</a></h3>
         <div class="hamburger" id="hamburger">
-        <div class="icon">
-          <span class="line-1"></span>
-          <span class="line-2"></span>
-          <span class="line-3"></span>
+          <div class="icon">
+            <span class="line-1"></span>
+            <span class="line-2"></span>
+            <span class="line-3"></span>
+          </div>
         </div>
-      </div>
       </nav>
+  
       <section class="menu" id="menu">
         <div class="container">
           <ul class="options">
             <li><a href="index1.html">Home</a></li>
-            <li data-book><a href="borrowed_books.html">Books</a></li>
+            <li><a href="borrowed_books.html">Books</a></li>
             <li data-is-admin style="display:none;"><a href="admin_index.html">Admin</a></li>
-
-            <!-- testing purposes only -->
-            <!-- <button id="addBook" type="button">Add Book</button> -->
-            <!-- admin -->
-            <!-- <li><a href="">Admin</a></li> -->
           </ul>
           <div class="account">
             <a id="userName" href="#" class="username">Guest</a>
@@ -37,12 +33,24 @@
           </div>
         </div>
       </section>
+    </header>
 
-    </section>
-
-    <a href="index1.html"></a>
-    <a href="admin_user.html">Managing Users</a>
-    <a href="admin_book.html">Managing Books</a>
+    <main>
+      <div class="container2">
+        <div class="manage">
+          <img src="../../public/images/manager_book.png" alt="">
+          <div class="button-container">
+            <a class="button" href="admin_book.html">Manage Books</a>
+          </div>
+        </div>
+        <div class="manage">
+          <img src="../../public/images/manager_user.png" alt="">
+          <div class="button-container">
+            <a class="button" href="admin_book.html">Users/Admin</a>
+          </div>
+        </div>
+      </div>
+    </main>
   
     <script type="module" src="bundled_files.js"> </script>
   </body>
