fixed the sidebar on admin books and users, uncomment on js

--- a/src/pages/admin_index.html
+++ b/src/pages/admin_index.html
@@ -46,7 +46,7 @@
         <div class="manage">
           <img src="../../public/images/manager_user.png" alt="">
           <div class="button-container">
-            <a class="button" href="admin_book.html">Users/Admin</a>
+            <a class="button" href="admin_user.html">Users/Admin</a>
           </div>
         </div>
       </div>
