fixed main page

--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -83,7 +83,7 @@
         <template id="book_template">
           <div class="book_card">
             <div class="book_img">
-              <img data-book-img src="public/images/book.jpg" alt="">
+              <img class="book_picture" data-book-img src="public/images/book.jpg" alt="">
             </div>
             <div class="book_info">
               <p data-book-id style="display:none;"></p>
