--- a/src/pages/entry_page.html
+++ b/src/pages/entry_page.html
@@ -10,56 +10,84 @@
 </head>
 
 <body>
-  <div class="container" id="container">
-    <!-- Log in -->
-    <form class="form-container logInForm" id="logInForm">
-      <h1>Already have an account?</h1>
-      <h5>Log in now and continue managing your library with ease.</h5>
-      <label for="email">Email</label>
-      <input id="logInEmail" type="email" name="email" placeholder="youremail@example.com" autocomplete="off">
-      <label for="password">Password</label>
-      <input id="logInPass" type="password" name="password" placeholder="********">
-      <section class="button-area">
-        <button type="button" class="active" id="logInBtn">Log In</button> <!-- submit login form -->
-        <button type="button" class="" id="register">Sign Up</button> <!-- toggle to sign-up form -->
-      </section>
-    </form>
+  <header id="header">
+    <nav>
+      <h3 class="title"><a href="index1.html">Akaru</a></h3>
+      <div class="hamburger" id="hamburger">
+        <div class="icon">
+          <span class="line-1"></span>
+          <span class="line-2"></span>
+          <span class="line-3"></span>
+        </div>
+      </div>
+    </nav>
 
-    <!-- Sign up -->
-    <form class="form-container signUpForm" id="signUpForm">
-      <h1>New to our system?</h1>
-      <h5>Sign up today and take the first step towards efficient library management.</h5>
-      <section class="form-card">
-        <div class="item1">
-          <label for="username">Name</label>
-          <input id="userName" type="text" name="username" placeholder="Bryan Santiago" autocomplete="off">
+    <section class="menu" id="menu">
+      <div class="container">
+        <ul class="options">
+          <li><a href="index1.html">Home</a></li>
+          <li><a href="borrowed_books.html">Books</a></li>
+          <li data-is-admin style="display:none;"><a href="admin_index.html">Admin</a></li>
+        </ul>
+        <div class="account">
+          <a id="userName" href="#" class="username">Guest</a>
+          <button id="logOutBtn" type="button" class="logout">Log Out</button>
         </div>
-        <div class="item2">
-          <label for="phoneNum">Phone Number</label>
-          <input id="userPhone" type="tel" name="phoneNum" placeholder="+639123456789" autocomplete="off">
-        </div>
-        <div class="item3">
-          <label for="email">Email</label>
-          <input id="userEmail" type="email" name="email" placeholder="youremail@example.com" autocomplete="off">
-        </div>
+      </div>
+    </section>
+  </header>
 
-        <div class="item4">
-          <label for="password">Password</label>
-          <input id="userPass" type="password" name="password" placeholder="********">
-        </div>
-      </section>
-      <section class="button-area">
-        <button type="button" class="active" id="signUpBtn">Sign Up</button> <!-- submit sign-up form -->
-        <button type="button" class="" id="login">Log In</button> <!-- toggle to login form -->
-      </section>
-    </form>
+  <section class="content">
+    <div class="container" id="container">
+      <!-- Log in -->
+      <form class="form-container logInForm" id="logInForm">
+        <h1>Already have an account?</h1>
+        <h5>Log in now and continue managing your library with ease.</h5>
+        <label for="email">Email</label>
+        <input id="logInEmail" type="email" name="email" placeholder="youremail@example.com" autocomplete="off">
+        <label for="password">Password</label>
+        <input id="logInPass" type="password" name="password" placeholder="********">
+        <section class="button-area">
+          <button type="button" class="active" id="logInBtn">Log In</button> <!-- submit login form -->
+          <button type="button" class="" id="register">Sign Up</button> <!-- toggle to sign-up form -->
+        </section>
+      </form>
 
-    <!-- image panel -->
-    <div class="toggle-container">
-      <img src="public/images/book.jpg" class="toggle" alt="Open Book">
+      <!-- Sign up -->
+      <form class="form-container signUpForm" id="signUpForm">
+        <h1>New to our system?</h1>
+        <h5>Sign up today and take the first step towards efficient library management.</h5>
+        <section class="form-card">
+          <div class="item1">
+            <label for="username">Name</label>
+            <input id="userName" type="text" name="username" placeholder="Bryan Santiago" autocomplete="off">
+          </div>
+          <div class="item2">
+            <label for="phoneNum">Phone Number</label>
+            <input id="userPhone" type="tel" name="phoneNum" placeholder="+639123456789" autocomplete="off">
+          </div>
+          <div class="item3">
+            <label for="email">Email</label>
+            <input id="userEmail" type="email" name="email" placeholder="youremail@example.com" autocomplete="off">
+          </div>
+
+          <div class="item4">
+            <label for="password">Password</label>
+            <input id="userPass" type="password" name="password" placeholder="********">
+          </div>
+        </section>
+        <section class="button-area">
+          <button type="button" class="active" id="signUpBtn">Sign Up</button> <!-- submit sign-up form -->
+          <button type="button" class="" id="login">Log In</button> <!-- toggle to login form -->
+        </section>
+      </form>
+
+      <!-- image panel -->
+      <div class="toggle-container">
+        <img src="public/images/book.jpg" class="toggle" alt="Open Book">
+      </div>
     </div>
-  </div>
-
+  </section>
   <script src="app/entry_page.js"></script>
   <script type="module" src="bundled_files.js"> </script>
 </body>
