--- a/src/pages/admin_user.html
+++ b/src/pages/admin_user.html
@@ -11,7 +11,7 @@
 <body>
   <header id="header">
     <nav>
-      <h3 class="title"><a href="index1.html">Akaru</a></h3>
+      <h3 class="title"><a href="index.html">Akaru</a></h3>
       <div class="hamburger" id="hamburger">
         <div class="icon">
           <span class="line-1"></span>
@@ -24,7 +24,7 @@
     <section class="menu" id="menu">
       <div class="container">
         <ul class="options">
-          <li><a href="index1.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="borrowed_books.html">Books</a></li>
           <li data-is-admin style="display:none;"><a href="admin_index.html">Admin</a></li>
         </ul>
@@ -82,6 +82,10 @@
             <input class="input__value"  type="text" name="username" placeholder="username" required>
           </div>
           <div class="width">
+            <label class="label__name"  for="passwd">Password</label>
+            <input class="input__value" type="email" name="passwd" placeholder="password" required>
+          </div>
+          <div class="width">
             <label class="label__name"  for="email">Email</label>
             <input class="input__value" type="email" name="email" placeholder="email" required>
           </div>
@@ -111,6 +115,10 @@
           <div class="width">
             <label class="label__name" for="username">Username</label>
             <input class="input__value" type="text" name="username" placeholder="username">
+          </div>
+          <div class="width">
+            <label class="label__name"  for="passwd">Password</label>
+            <input class="input__value" type="email" name="passwd" placeholder="password" required>
           </div>
           <div class="width">
             <label class="label__name" for="email">Email</label>
