--- a/src/pages/admin_index.html
+++ b/src/pages/admin_index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <nav>
-        <h3 class="title"><a href="index1.html">Akaru</a></h3>
+        <h3 class="title"><a href="index.html">Akaru</a></h3>
         <div class="hamburger" id="hamburger">
           <div class="icon">
             <span class="line-1"></span>
@@ -23,7 +23,7 @@
       <section class="menu" id="menu">
         <div class="container">
           <ul class="options">
-            <li><a href="index1.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="borrowed_books.html">Books</a></li>
             <li data-is-admin style="display:none;"><a href="admin_index.html">Admin</a></li>
           </ul>
