--- a/src/pages/admin_user.html
+++ b/src/pages/admin_user.html
@@ -83,7 +83,7 @@
           </div>
           <div class="width">
             <label class="label__name"  for="passwd">Password</label>
-            <input class="input__value" type="email" name="passwd" placeholder="password" required>
+            <input class="input__value pass" type="password" name="passwd" placeholder="password" required>
           </div>
           <div class="width">
             <label class="label__name"  for="email">Email</label>
@@ -118,7 +118,7 @@
           </div>
           <div class="width">
             <label class="label__name"  for="passwd">Password</label>
-            <input class="input__value" type="email" name="passwd" placeholder="password" required>
+            <input class="input__value pass" type="password" name="passwd" placeholder="password" required>
           </div>
           <div class="width">
             <label class="label__name" for="email">Email</label>
@@ -154,9 +154,7 @@
       </form>
     </div>
   </div>
-  
 
   <script type="module" src="bundled_files.js"></script>
-
 </body>
 </html>
