fixed problem with user entry

--- a/src/pages/entry_page.html
+++ b/src/pages/entry_page.html
@@ -60,7 +60,7 @@
         <section class="form-card">
           <div class="item1">
             <label for="username">Name</label>
-            <input id="userName" type="text" name="username" placeholder="Bryan Santiago" autocomplete="off">
+            <input id="userNameInput" type="text" name="username" placeholder="Bryan Santiago" autocomplete="off">
           </div>
           <div class="item2">
             <label for="phoneNum">Phone Number</label>
