added titles for users to see cut off content

--- a/src/pages/borrowed_books.html
+++ b/src/pages/borrowed_books.html
@@ -51,7 +51,7 @@
               <!-- hide everything except book title and button -->
               <p data-book-id style="display:none;"></p>
               <p data-book-category class="genre" style="display:none;">Romance</p>
-              <p data-book-name class="book_title">Harry Potter</p>
+              <p title="" data-book-name class="book_title">Harry Potter</p>
               <p data-book-authors style="display:none;">HIDE ME</p>
               <button data-book-read-btn class="read" type="button">Read</button>
               <button data-book-return-btn class="return" type="button">Return</button>
