--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -87,8 +87,8 @@
             </div>
             <div class="book_info">
               <p data-book-id style="display:none;"></p>
-              <p data-book-category class="genre">Romance</p>
-              <p data-book-name class="book_title">Harry Potter</p>
+              <p title="" data-book-category class="genre">Romance</p>
+              <p title="" data-book-name class="book_title">Harry Potter</p>
               <p data-book-authors style="display:none;">HIDE ME</p>
               <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
             </div>
